Add base tag to fix assets

--- a/andrea-vetrano-site/index.html
+++ b/andrea-vetrano-site/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html <base href="/mio-sito/andrea-vetrano-site/">
+lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,7 +23,8 @@
         html { scroll-behavior: smooth; }
         body {
             font-family: 'Jost', sans-serif;
-            background: var(--noir);
+            background: var(--noir);<base href="/mio-sito/andrea-vetrano-site/">
+
             color: var(--platinum);
             line-height: 1.7;
             -webkit-font-smoothing: antialiased;
